--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/bartoc-icon.png" />
     <link rel="stylesheet" href="/main.css">
+
+    <script>
+      /*to prevent Firefox FOUC, this must be here*/
+      let FF_FOUC_FIX;
+    </script>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bartoc Search</title>
     <!--app-head-->
